simple/test/features/errors/codegen/e2009_unsupported_return_type.spl
# E2009: Unsupported Return Type

Feature: E2009 - Unsupported Return Type in Codegen
  As a Simple compiler
  I want to detect unsupported return types during codegen
  So that only supported types are returned

  Background:
    Given I have the Simple compiler

  Scenario: Unsupported return type
    When I compile with codegen:
      '''
      fn test() -> UnsupportedType:
        get_unsupported_value()
      '''
    Then I should see error E2009
    And the error message should be "unsupported return type `{type}`"
    And the label should indicate "unsupported type"
    And the help should suggest "this type cannot be returned from functions yet"

  Scenario: Valid return type
    When I compile with codegen:
      '''
      fn test() -> i32:
        42
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile with codegen:
      '''
      fn test() -> UnsupportedType:
        get_unsupported_value()
      '''
    Then I should see error E2009
    And the error message should contain "지원되지 않는 반환 타입"
